--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 kotlin.code.style=official
+kotlin.js.webpack.major.version=4
 systemProp.kotlinVersion=1.7.10
+systemProp.ktorVersion=2.1.0
+systemProp.kotlinXSerializationVersion=1.4.1
+systemProp.kotlinXCoroutinesVersion=1.6.4
