--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 kotlin.code.style=official
-kotlin.js.webpack.major.version=4
-systemProp.kotlinVersion=1.7.10
-systemProp.ktorVersion=2.1.0
-systemProp.kotlinXSerializationVersion=1.4.1
-systemProp.kotlinXCoroutinesVersion=1.6.4
-systemProp.kordVersion=0.8.x-SNAPSHOT
+kotlin.js.webpack.major.version=5
+
+kotlinVersion=1.8.0
+ktorVersion=2.1.0
+kotlinXSerializationVersion=1.4.1
+kotlinXCoroutinesVersion=1.6.4
+kordVersion=0.8.x-SNAPSHOT
