--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.js.webpack.major.version=5
 
 kotlinVersion=1.9.21
 ktorVersion=2.2.3
+exposedVersion=0.45.0
 kotlinXSerializationVersion=1.4.1
 kotlinXCoroutinesVersion=1.6.4
 kordVersion=0.8.x-SNAPSHOT
